@@ -103,7 +103,8 @@ LIBCROCO_CFLAGS=""
 LIBCROCO_LIBS=""
 LIBCROCOPKG=""
 
-test_croco=true
+# DOM: re-enable this sometime when our libcroco support works
+test_croco=false
 AC_ARG_WITH(croco,[  --with-croco  Use libcroco for CSS parsing],[
 	if test "x$withval" = "xno"; then
 		test_croco=false
